# MicroVLA

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  RUNBOX.md  TRM.py  bridge_shards.txt  libero_shards.txt  paper.md  pyproject.toml  requirements-full.txt  requirements.txt
eval/: RUNBOX_EVAL.md  SIM_SETUP.md  __init__.py  _libero_compat.py  baselines.py  env_smoke.py  identity_norm_stats.json  lang_probe.py  libero_eval.py  policy.py  record_mp4.py  replay_probe.py  rollout_video.py  scorecard.py  sweep.py
eval_results/: libero_object_real_1784704529996_telemetry.jsonl  libero_object_real_1784704615313_telemetry.jsonl  libero_object_real_1784705516828_results.json  libero_object_real_1784705516828_telemetry.jsonl  libero_object_real_1784788912042_results.json  libero_object_real_1784788912042_telemetry.jsonl  libero_spatial_real_1784779115137_telemetry.jsonl  libero_spatial_real_1784779442961_telemetry.jsonl
experiments/: horizon_curve.py  tracker.py
microvla/: __init__.py  config.py  pipeline.py
microvla/aux_state/: __init__.py  drift_encoder.py
microvla/fusion/: __init__.py  slot_fusion.py
microvla/jepa/: __init__.py  corrector.py  loop.py
microvla/perception/: __init__.py  command_parser.py  text_encoder.py  video_stream.py  yolo_world.py
microvla/planner/: __init__.py  chrono_planner.py
microvla/trm/: TRM_SPEC.md  __init__.py  interface.py  mock_trm.py
microvla/utils/: __init__.py  embedding.py  param_audit.py
preprocess/: README.md  __init__.py  bridge.py  bridge_rlds.py  common.py  libero.py  renorm_symmetric.py  shard_pipeline.py  teacher.py
results/: RESULTS.md  metrics.jsonl
scripts/: convert_all.sh
tests/: conftest.py  test_command_parser.py  test_eval.py  test_grounding.py  test_jepa_loop.py  test_param_budget.py  test_pipeline.py  test_preprocess.py  test_renorm.py  test_shapes.py  test_shard_pipeline.py
train/: __init__.py  dataset.py  losses.py  train_batched.py  train_full.py  train_planner.py
